<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_i"
            android:title="@string/motivational" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_i"
            android:title="@string/love" />
        <item
        android:id="@+id/funny"
        android:icon="@drawable/ic_i"
        android:title="@string/life" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_i"
            android:title="@string/cute_quotes" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_i"
            android:title="@string/serious" />
        <item
            android:id="@+id/i"
            android:icon="@drawable/ic_i"
            android:title="@string/l" />
        <item
        android:id="@+id/sav"
        android:icon="@drawable/ic_i"
        android:title="@string/savage" />
        <item
            android:id="@+id/bf13"
            android:icon="@drawable/ic_i"
            android:title="@string/positive" />
        <item
            android:id="@+id/bf15"
            android:icon="@drawable/ic_i"
            android:title="@string/success" />
        <item
            android:id="@+id/bf14"
            android:icon="@drawable/ic_i"
            android:title="@string/sport" />
        <item
            android:id="@+id/fav"
            android:icon="@drawable/ic_fav"
            android:title="@string/favorites" />
        <item
            android:id="@+id/coll"
            android:icon="@drawable/ic_col"
            android:title="@string/collections" />
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_p"
                android:title="@string/join_us" />

    </group>
</menu>
